# bouldering-coach

./: README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
models/: labels.txt
output/: grip_analysis.json  metrics.csv  summary.json
src/boulder_coach/: __init__.py  cli.py  gemini_client.py  grip.py  holds.py  metrics.py  pipeline.py  pose.py  render.py
src/boulder_coach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
